<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/user"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/confirm_your_password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/confirm_passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:autofillHints=""
            android:hint="@string/confirm"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textColor="@color/black" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button

            android:layout_marginStart="10dp"
            android:text="@string/sign"
            android:fontFamily="@font/gilroy_bold"
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAllCaps="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            android:fontFamily="@font/gilroy_light"/>

        <TextView

            android:layout_marginStart="10dp"
            android:text="@string/sign_in"
            android:fontFamily="@font/gilroy_bold"
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>